Making TopNav fixed

--- a/Freshtex.html
+++ b/Freshtex.html
@@ -10,13 +10,13 @@
 </head> 
 <body>   
     <div class="container">
-            <nav class="language-nav">
+            <nav class="language-nav" style="position: fixed; z-index: 10; margin-left: -12px;">
                 <div class="hamburger-toggle">
                   <button class="toggle-button" onclick="toggleLanguageList()">En &#9776;</button>
                 </div>                
                 <a href="landing.html" class="action-home">
                 <img src="home.png" alt="Home button">Welcome to hiTextedTex</a>
-                <ul class="language-list" id="languagelist">
+                <ul class="language-list" id="languagelist" style="margin-left: -100px;">
                     <li>
                         <a href="hitexun.html" class="language-link" data-lang="english">English</a>
                     </li>
